@startuml
enum AccountType {
  YELLOW
  RED
  BLUE
  GREEN
}

class AccountInfo {
  +username: str
  +balance: int
  +account_type: AccountType
  +locked: bool
}

class StorageManager {
  -db_path: str
  +is_user_exist(username): bool
  +get_user_information(username): AccountInfo
  +update_balance(username, updated_balance)
  +update_lock(username, updated_status)
  +delete_subscription(username, subscription_name)
  +delete_account(username): bool
}

class AccountRules {
  +get_balance(user_info): str
  +add_money(user_info, amount): str
  +get_money(user_info, amount): str
}

class RedAccountRules {
  +add_money(user_info, amount): str
}

class BlueAccountRules {
  +get_money(user_info, amount): str
}

class YellowAccountRules {
  +get_balance(user_info): str
  +get_money(user_info, amount): str
}

class GreenAccountRules {
  +get_balance(user_info): str
}

AccountRules <|-- RedAccountRules
AccountRules <|-- BlueAccountRules
AccountRules <|-- YellowAccountRules
AccountRules <|-- GreenAccountRules

class Logics {
  +{classmethod} connect_user(username): AccountInfo
  +{classmethod} get_balance(user_info): str
  +{classmethod} add_money(user_info, amount): str
  +{classmethod} get_money(user_info, amount): str
  +add_subscription()
  +delete_subscription(user_info, subscription_name)
  +list_subscription()
  +{classmethod} register_user(username): AccountInfo
  +{classmethod} del_account(user_info): tuple[bool, str]
}

class db_setup {
  +init_database(db_name: str)
}

class main {
  +api()
  +main()
}

AccountInfo *-- AccountType : account_type
StorageManager ..> AccountInfo : creates
AccountRules ..> StorageManager : uses (via STORAGE_MANAGER)
Logics ..> AccountRules : looks up via ACCOUNT_RULES
Logics ..> StorageManager : uses (via STORAGE_MANAGER)
Logics ..> AccountInfo : uses
main ..> Logics : uses
main ..> db_setup : init_database()
@enduml
